--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div style="border: 1px dashed black;">
   <a routerLink="/about"  routerLinkActive="active">About</a>
   <a routerLink="/login"  routerLinkActive="active">Login</a>
+  <a routerLink="/entry"  routerLinkActive="active">Entry</a>
   <a routerLink="/quiz" routerLinkActive="active">Quiz</a>
   <hr>
   <div style="border: 1px solid black;">
